feat (api-entity review): add api filter rating. refactor code.